log
Thu 14 Mar 2024 08:46:23 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
Thu 14 Mar 2024 08:47:55 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:38:11: error: expected ‘;’ before ‘}’ token
   38 |     size--
      |           ^
      |           ;
   39 |   }
      |   ~        
Compilation failed
5853533
Thu 14 Mar 2024 08:48:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
32fa24b
Thu 14 Mar 2024 08:54:27 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:70:54: error: invalid operands to binary * (have ‘long unsigned int’ and ‘int *’)
   70 |     arregloNuevo = realloc(arregloNuevo, sizeof(int) * (newSize + 1));
      |                                                      ^ ~~~~~~~~~~~~~
      |                                                                 |
      |                                                                 int *
Compilation failed
507ba2b
Thu 14 Mar 2024 08:54:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:70:20: error: ‘arregloNuevo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   70 |     arregloNuevo = realloc(arregloNuevo, sizeof(int) * ((*newSize) + 1));
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7254a7c
Thu 14 Mar 2024 08:55:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:72:22: error: ‘arregloNuevo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   72 |       arregloNuevo = realloc(arregloNuevo, sizeof(int) * ((*newSize) + 1));
      |                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cfcf4e3
